Fixed banner text overflow

--- a/hhs-p6-webshop-project/wwwroot/css/site.css
+++ b/hhs-p6-webshop-project/wwwroot/css/site.css
@@ -553,6 +553,8 @@ nav li {
 
     .text-banner .banner-bg-title-text {
         width: 100%;
+        height: 1em;
+        overflow: hidden;
         font-size: 12em;
         font-family: Niconne;
         position: absolute;
